--- a/newran/index.html
+++ b/newran/index.html
@@ -7,9 +7,9 @@
 	
 </head>
 <body>
- <center>	
-	<input type="button" value="spin"  id='spin' />
-	<canvas id="canvas" width="700" height="700"></canvas>
-	<script src="script.js"></script>
+	<button class="generate number">?</button>
+
+	<script src="js.js"></script>
+
 </body>
 </html>
